<resources>
    <string name="app_name">Quotes ding</string>
    <string name="nav_Home">Home</string>
    <string name="nav_view_all">View all quotes</string>
    <string name="show_random">Show random quote</string>
    <string name="nav_add_quote">Add Quote</string>
    <string name="back">Back</string>
    <string name="quotePrompt">Quote text: </string>
    <string name="quote_author">Quote author: </string>
    <string name="quote_date">Quote date: </string>
    <string name="save_changes">Save changes</string>
    <string name="delete_quote"><b>Delete quote</b></string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="show_allQuotesWithFragments">Show all quotes with fragments</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>
    <string name="discard_changes">Discard changes</string>
    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="MainPage">Welcome to the quotes app, you can use the menu in the top left corner to navigate to different pages.</string>
</resources>