<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:background="@color/teal_700"
    tools:context=".AddQuoteActivity">

    <Button
        android:id="@+id/btn_back_addQuote"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="1dp"
        android:onClick="onBack"
        android:text="@string/back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_addQuote_addQuote"
        android:layout_width="342dp"
        android:layout_height="46dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="99dp"
        android:layout_marginEnd="8dp"
        android:onClick="onConfirm"
        android:text="@string/nav_add_quote"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_text_quoteDate_addQuote" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="115dp"
        android:layout_height="24dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="64dp"
        android:text="@string/quotePrompt"
        app:layout_constraintEnd_toStartOf="@+id/editText_quote_addQuote"
        app:layout_constraintHorizontal_bias="0.015"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_back_addQuote" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="115dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="80dp"
        android:text="@string/quote_author"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <EditText
        android:id="@+id/editText_quote_addQuote"
        android:layout_width="178dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="55dp"
        android:layout_marginEnd="15dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:singleLine="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_back_addQuote" />

    <EditText
        android:id="@+id/edit_text_quotePerson_addQuote"
        android:layout_width="178dp"
        android:layout_height="45dp"
        android:layout_marginTop="71dp"
        android:layout_marginEnd="15dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/textView4"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="115dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="84dp"
        android:text="@string/quote_date"
        app:layout_constraintEnd_toStartOf="@+id/edit_text_quoteDate_addQuote"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <EditText
        android:id="@+id/edit_text_quoteDate_addQuote"
        android:layout_width="178dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="71dp"
        android:layout_marginEnd="15dp"
        android:ems="10"
        android:inputType="date"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

</androidx.constraintlayout.widget.ConstraintLayout>