<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="400dp"
    android:layout_height="match_parent"
    android:background="#006064"
    android:outlineProvider="paddedBounds"
    android:translationZ="4dp">

    <TableLayout
        android:layout_width="400dp"
        android:layout_height="wrap_content"
        android:stretchColumns="1"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="1dp">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="TextView" />

            <EditText
                android:id="@+id/popUpQuoteText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:gravity="start|top"
                android:inputType="textMultiLine"
                android:maxHeight="200dp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="TextView" />

            <EditText
                android:id="@+id/popup_Quote_author"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:gravity="start|top"
                android:inputType="textMultiLine" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/quote_date" />

            <EditText
                android:id="@+id/popup_quote_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="date" />

        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/btn_popup_DeleteQuote"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/delete_quote" />

            <Button
                android:id="@+id/btn_popup_saveChanges"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/save_changes" />

        </TableRow>
    </TableLayout>
</androidx.constraintlayout.widget.ConstraintLayout>

